--- a/Basic/01Intro.html
+++ b/Basic/01Intro.html
@@ -34,6 +34,43 @@
     <img src="../Image/basic1.png" alt="">
     <img src="../Image/domvsbom.png" alt="">
     <img src="../Image/EventsinJavascript.png" alt="">
+
+
+    <p>
+        An operator is capable of manipulating a certain value or operand. Operators are used to perform specific
+        mathematical and logical computations on operands. In other words, we can say that an operator operates the
+        operands. In JavaScript operators are used for compare values, perform arithmetic operations etc. There are
+        various
+        operators supported by JavaScript:
+    </p>
+    <ul>
+        <li><strong>Arithmetic Operators</strong></li>
+        <li><strong>Comparison Operators</strong></li>
+        <li><strong>Logical Operators</strong></li>
+        <li><strong>Assignment Operators</strong></li>
+        <li><strong>Ternary Operators</strong></li>
+        <li><strong>typeof Operator</strong></li>
+    </ul>
+    <ul>
+        <li>
+            <img src="../Image/JavaScript-Arithmatic-Operators.png" alt="">
+        </li>
+        <li>
+            <img src="../Image/comparison-operator.jpg" alt="">
+        </li>
+        <li>
+
+            <img src="../Image/logical-operator.jpg" alt="">
+        </li>
+        <li><img src="../Image/JavaScript-Assignment-Operators.png" alt="">
+
+        </li>
+        <!-- <li><img src="ternalry.png" alt=""> -->
+        </li>
+        <li><img src="../Image/TypeOf-in-TypeScript-as-a-Type-Guard.gif" alt="">
+        </li>
+
+    </ul>
     <script>
         console.log("called")
         console.log("called")
@@ -54,6 +91,16 @@
         console.log(document.body.style);
         document.body.style.backgroundColor = "green"
         // document
+        a = 50
+        a = a + 5;
+        a += 5;
+        b = 50
+        sum = a + b
+        console.log(sum);
+        console.log(typeof sum);
+        console.log(typeof "true");
+        console.log(typeof true);
+
     </script>
 
 </body>
