--- a/Basic/12pattern.html
+++ b/Basic/12pattern.html
@@ -11,16 +11,16 @@
     <a href="https://www.javatpoint.com/star-program-in-c#Rhombus-Star">Reference</a>
 
     <script>
-        // for (let index = 0; index < 100; index++) {
-        //     console.log(index%10 == 0  );
-        //     if (index%10 == 0) {
-        //         document.write("<br>")
+        for (let index = 0; index < 100; index++) {
+            console.log(index % 10 == 0);
+            if (index % 10 == 0) {
+                document.write("<br>")
 
-        //     } else {
-        //         document.write("*")
+            } else {
+                document.write("*")
 
-        //     }
-        // }
+            }
+        }
         for (let index = 0; index < 10; index++) {
             // const element = array[index];
             for (let a = 0; a <= index; a++) {
