--- a/Basic/13TImeoutTimeintervel.html
+++ b/Basic/13TImeoutTimeintervel.html
@@ -11,13 +11,14 @@
 
     <script>
 
-        setTimeout(() => {
-            console.log("setTimeout");
-        }, 3000);
-        // setInterval(() => {
-        //     console.log("setInterval");
-
+        // setTimeout(() => {
+        //     console.log("setTimeout");
         // }, 3000);
+        setInterval(() => {
+            console.log("setInterval");
+
+        }, 3000);
+
     </script>
 </body>
 
