--- a/task/extra2.html
+++ b/task/extra2.html
@@ -22,16 +22,9 @@
             line-height: 60px;
         }
 
-        .navbar,
-        .template-menu,
-        .search-profile {
-            display: none;
-        }
-
-        .navbar,
-        .template-menu,
-        .search-profile {
-            display: none;
+        .headerfixed {
+            position: fixed;
+            width: 100%;
         }
 
         .navbar li {
@@ -63,41 +56,43 @@
             margin: 0 auto;
         }
 
-        .dispnavmenu {
-            display: block !important;
+        .box {
+            height: 400px;
+            box-shadow: 2px 2px 10px grey;
         }
 
-        .dispnavmenu li {
-            display: block !important;
+        .container {
+            width: 900px;
+            margin: 20px auto;
+            padding: 20px;
         }
 
-        @media (min-width:700px) {
+        section:nth-child(2) {
+            padding-top: 80px;
+        }
 
-            .navbar,
-            .template-menu,
-            .search-profile {
-                display: block;
-            }
+        section:nth-child(even) {
+
+            background-color: rgba(186, 186, 186, 0.517);
         }
     </style>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-
 </head>
 
 <body>
-    <header>
+    <header id="main-header">
         <div class="container-fluid">
             <div class="row">
 
                 <div class="logo">
+
                     W3layouts
                 </div>
-                <i class="fa-solid fa-bars" id="toggle-menu"></i>
                 <div class="template-menu">
+                    <i class="fa-solid fa-bars"></i>
                     Web Templates <i class="fa-sharp fa-solid fa-caret-down"></i>
                 </div>
-                <nav class="navbar" id="main-navbar">
-                    <ul>
+                <nav>
+                    <ul class="navbar">
                         <li><a href="#">home</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">FAQ</a></li>
@@ -113,12 +108,61 @@
             </div>
         </div>
     </header>
+    <section>
+        <div class="box">
+            <h2>Slider</h2>
+        </div>
+    </section>
+    <section>
+        <div class="box">
+            <div class="container">
 
+                <h2>Section</h2>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="box">
+            <div class="container">
+
+                <h2>Section</h2>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="box">
+            <div class="container">
+
+                <h2>Section</h2>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="box">
+            <div class="container">
+
+                <h2>Section</h2>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="box">
+            <div class="container">
+
+                <h2>Section</h2>
+            </div>
+        </div>
+    </section>
     <script>
-        document.getElementById('toggle-menu').addEventListener("click", function () {
-            console.log("Called");
-            $("#main-navbar").toggleClass("dispnavmenu");
-        })
+        window.addEventListener('scroll', function (e) {
+            const scrolled = window.scrollY; // Number of pixels the user has scrolled
+            // console.log(scrolled);
+            if (scrolled >= 500) {
+                document.getElementById("main-header").classList.add("headerfixed")
+            } else {
+                document.getElementById("main-header").classList.remove("headerfixed")
+            }
+        });
     </script>
 </body>
 
